--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ main {
   width: 60%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
 }
 
