--- a/src/style.css
+++ b/src/style.css
@@ -167,3 +167,34 @@ label {
 .back-card {
   display: none;
 }
+
+
+/* Animação Cartão */
+
+.flip-card {
+  animation: flip-card 0.25s forwards;
+}
+
+.flip-card-2 {
+  animation: flip-card-2 0.25s forwards;
+}
+
+@keyframes flip-card {
+  0% {
+    transform: rotateY(0deg);
+  }
+
+  100% {
+    transform: rotateY(90deg);
+  }
+}
+
+@keyframes flip-card-2 {
+  0% {
+    transform: rotateY(-90deg);
+  }
+
+  100% {
+    transform: rotateY(0deg);
+  }
+}
